<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CallStatsActivity!</string>
    <string name="app_name">Outgoing Calls Stats</string>
	<string name="days_month_prompt">Choose a Day in month</string>
	<string name="days_in_month_prompt">Choose number of Days in month</string>
	<string name="settings_file">settings.dat</string>
	<string name="sort_promt">Sort by</string>
	<string name="rounding_promt">Rounding</string>
	<string name="invalid_date_interval_message">Invalid Date Interval!</string>
	<string name="settings">Settings</string>
	<string name="chart_day">Day Chart</string>
	<string name="chart_month">Month Chart</string>
	<string name="about">About</string>
	<string name="normal_view">Normal View</string>
	<string name="pie_chart">Pie Chart</string>
	<string name="about_text">Created by Igor Crevar (2012)\n\n JJoe64 GraphView used for charts</string>
	<string name="pref_start_of_month_title">Start of month</string>
	<string name="pref_start_of_month_desc">When your payment month starts?</string>
	<string name="pref_minute_rounding_title">Minute Rounding</string>
	<string name="pref_minute_rounding_desc">Does you provider rounds minutes?</string>
	<string name="pref_to_date_fixed_title">Is To Date Fixed</string>
	<string name="pref_to_date_fixed_desc">+1 Month always</string>
	<string name="minutes_formater">\u0020(%s minutes)</string>	
	<string name="duration_string">Sum:\u0020</string>
	<string name="exit">Exit</string>
</resources>
